# z-fullstack-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.ru.md  pyproject.toml
app/: __main__.py
app/database/: repo.py
app/types/: service.py
app/utils/: configurator.py
backend/: .dockerignore  .gitignore  pyproject.toml  ruff.toml
backend/app/: __init__.py  __main__.py
backend/app/database/: mixins.py  model.py  wrapper.py
backend/app/types/: datetime.py  schema.py
backend/app/utils/: configurator.py
backend/app/web/: app.py  exception_handlers.py  lifespan.py  state.py
backend/app/web/dependencies/: database.py  services.py
backend/app/web/routes/: __init__.py  common.py
frontend/: package.json  prettier.config.ts
frontend/app/: globals.css  layout.tsx
