[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI Boilerplate Template"
authors = [
    { name = "Nikita Zagoruyko", email = "nik.nightness@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.13.1",
    "starlette>=0.52.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
